--- a/src/assets/css/app.sass
+++ b/src/assets/css/app.sass
@@ -1,5 +1,7 @@
 @import "../../../node_modules/sanitize.css/sanitize.css"
-@import "../../components/atoms/**/*.sass"
+
+@import "./_constants.sass";
+@import "./_reset.sass";
 @import "../../components/organisms/**/*.sass"
 
 html
