--- a/src/components/organisms/header/_header.sass
+++ b/src/components/organisms/header/_header.sass
@@ -1,6 +1,7 @@
 .o-header
   padding-top: 48px;
-  background-image: linear-gradient(to top, $red 4px, $pink 5px)
+  background-image: linear-gradient(to top, $red 4px, $pink 4px)
+  box-shadow: 0 4px 12px $shadow-black
   z-index: 1000
 
   &__inner
