:+1: Add .m-main-visual.

--- a/src/assets/css/app.sass
+++ b/src/assets/css/app.sass
@@ -2,6 +2,7 @@
 
 @import "./_constants.sass";
 @import "./_reset.sass";
+@import "../../components/molecules/**/*.sass"
 @import "../../components/organisms/**/*.sass"
 
 html
