--- a/src/components/organisms/header/_header.sass
+++ b/src/components/organisms/header/_header.sass
@@ -1,4 +1,5 @@
 .o-header
+  position: relative
   padding-top: 48px;
   background-image: linear-gradient(to top, $red 4px, $pink 4px)
   box-shadow: 0 4px 12px $shadow-black
@@ -46,7 +47,7 @@
             content: ''
             position: absolute
             width: 100%
-            height: 40px
+            height: 16px
             bottom: -40px;
             transform: skew(-45deg)
             transform-origin: left bottom
