:+1: Add home-section

--- a/src/assets/css/app.sass
+++ b/src/assets/css/app.sass
@@ -4,9 +4,12 @@
 @import "./_reset.sass";
 @import "../../components/molecules/**/*.sass"
 @import "../../components/organisms/**/*.sass"
+@import "../../components/templates/**/*.sass"
+@import "../../components/pages/**/*.sass"
 
 html
   height: 100%
 
 body
   height: 100%
+  background-color: #fee
