:+1: Add detailed link

--- a/src/assets/css/app.sass
+++ b/src/assets/css/app.sass
@@ -1,4 +1,5 @@
 @import "../../../node_modules/sanitize.css/sanitize.css"
+@import url('https://fonts.googleapis.com/css?family=Questrial')
 
 @import "./_constants.sass";
 @import "./_reset.sass";
