--- a/src/components/molecules/home-section/_home-section.sass
+++ b/src/components/molecules/home-section/_home-section.sass
@@ -15,7 +15,9 @@
       margin-left: 24px
 
   &__column-title
-    padding: 16px 24px
-    background-color: $red
+    padding: 16px 0 12px
+    border-bottom: 1px solid $pink
     font-size: 20px
-    color: $light-pink
+    font-family: $typography-fonts
+    letter-spacing: 0.05em
+    color: $red
