--- a/src/components/organisms/header/_header.sass
+++ b/src/components/organisms/header/_header.sass
@@ -20,6 +20,8 @@
     span
       margin-left: 20px
       font-size: 24px
+      font-family: $typography-fonts
+      letter-spacing: 0.05em
       color: $red
 
   &__nav
@@ -34,6 +36,8 @@
         flex: 1 0 0
         background-color: $light-pink
         color: $red
+        font-family: $typography-fonts
+        letter-spacing: 0.05em
         transition: background-color 0.2s
 
         &:hover
