--- a/src/components/pages/home/_home.sass
+++ b/src/components/pages/home/_home.sass
@@ -1,3 +1,8 @@
 .p-home
   .m-main-visual
-    margin-bottom: 100px
+    margin-bottom: 32px
+
+  .m-home-section
+    &__column
+      .m-detailed-link
+        margin-top: 12px
