--- a/src/assets/css/_constants.sass
+++ b/src/assets/css/_constants.sass
@@ -3,3 +3,8 @@ $light-pink: #ffe4e9
 $red: #d55
 $dark-red: #911
 $shadow-black: rgba(0, 0, 0, 0.2)
+$text-black: #444
+
+$typography-fonts: 'Questrial', sans-serif;
+
+$bezier: cubic-bezier(0.0, 0.7, 0.3, 1.0)
