--- a/src/components/molecules/home-section/_home-section.sass
+++ b/src/components/molecules/home-section/_home-section.sass
@@ -21,3 +21,9 @@
     font-family: $typography-fonts
     letter-spacing: 0.05em
     color: $red
+
+  &__column-body
+    & > footer
+      margin-top: 12px
+      font-size: 14px
+      color: $red
