--- a/src/components/pages/home/_home.sass
+++ b/src/components/pages/home/_home.sass
@@ -1,8 +1,5 @@
 .p-home
-  .m-main-visual
-    margin-bottom: 32px
-
-  .m-home-section
+  .m-section
     &__column
       .m-detailed-link + .m-detailed-link
         margin-top: 12px
