:+1: Add large modifier for detailed link.

--- a/src/components/molecules/detailed-link/_detailed-link.sass
+++ b/src/components/molecules/detailed-link/_detailed-link.sass
@@ -63,3 +63,19 @@
 
     #{$me}__main
       color: $light-pink
+
+  &--large
+    padding: 16px 20px
+
+    & + #{$me}--large
+      margin-top: 20px
+
+    #{$me}__date
+      flex: 0 0 140px
+      font-size: 24px
+
+    #{$me}__separator
+      margin: 0 20px 0 8px
+
+    #{$me}__title
+      font-size: 24px
