--- a/src/components/molecules/detailed-link/_detailed-link.sass
+++ b/src/components/molecules/detailed-link/_detailed-link.sass
@@ -8,6 +8,9 @@
   background-color: $light-pink
   z-index: 2
 
+  & + &
+    margin-top: 12px
+
   &::before
     content: ''
     position: absolute
