--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -6,6 +6,7 @@
 @import "./_mixins";
 @import "./_fundamentals";
 @import "../../components/utils/**/*.scss";
+@import "../../components/atoms/**/*.scss";
 @import "../../components/molecules/**/*.scss";
 @import "../../components/organisms/**/*.scss";
 @import "../../components/templates/**/*.scss";
