--- a/src/assets/css/_fundamentals.scss
+++ b/src/assets/css/_fundamentals.scss
@@ -10,7 +10,7 @@ h2 {
 }
 
 h3 {
-  padding: 16px 0 12px;
+  padding-bottom: 12px;
   border-bottom: 1px solid $pink;
   font-weight: normal;
   font-size: 20px;
