--- a/src/components/molecules/detailed-link/_detailed-link.scss
+++ b/src/components/molecules/detailed-link/_detailed-link.scss
@@ -4,11 +4,10 @@
 
   display: flex;
   position: relative;
+  margin: 15px 0;
   padding: 8px 12px;
   background-color: $light-pink;
   z-index: 2;
-
-  & + & { margin-top: 12px; }
 
   &::before {
     content: '';
