--- a/src/assets/css/_mixins.scss
+++ b/src/assets/css/_mixins.scss
@@ -5,7 +5,7 @@
 }
 
 @mixin tablet {
-  @media screen and (max-width: 1024px) and (min-width: 769px) {
+  @media screen and (max-width: 1024px) {
     @content;
   }
 }
