--- a/src/components/molecules/detailed-link/_detailed-link.scss
+++ b/src/components/molecules/detailed-link/_detailed-link.scss
@@ -22,12 +22,38 @@
     z-index: -1;
   }
 
+  &--large {
+    padding: 16px 20px;
+
+    @include sp {
+      padding: 8px 12px;
+    }
+  }
+
+  @include sp {
+    display: block;
+  }
+
   &__date {
     flex: 0 0 100px;
     font-size: 18px;
     font-family: $typography-fonts;
     color: $red;
     transition: color $duration $bezier;
+
+    #{$me}--large & {
+      flex: 0 0 140px;
+      font-size: 24px;
+
+      @include sp { font-size: 16px; }
+    }
+
+    @include sp {
+      margin-left: 40px;
+      font-size: 14px;
+      & > div { display: inline-block; }
+      & > div + div { margin-left: 8px; }
+    }
   }
 
   &__separator {
@@ -35,6 +61,20 @@
     flex: 0 0 4px;
     background-color: $red;
     transition: background-color $duration $bezier;
+
+    #{$me}--large & {
+      margin: 0 20px 0 8px;
+
+      @include sp { top: 15px; }
+    }
+
+    @include sp {
+      position: absolute;
+      width: 28px;
+      height: 2px;
+      left: 6px;
+      top: 14px;
+    }
   }
 
   &__main {
@@ -47,13 +87,23 @@
   &__title {
     font-size: 20px;
 
+    #{$me}--large & {
+      font-size: 24px;
+
+      @include sp { font-size: 18px; }
+    }
+
     & + #{$me}__place:not(:empty) { margin-top: 6px; }
+
+    @include sp { font-size: 16px; }
   }
 
   &__place {
     font-size: 14px;
 
     &:empty { display: none; }
+
+    @include sp { font-size: 12px; }
   }
 
   &:hover {
@@ -64,20 +114,5 @@
     #{$me}__separator { background-color: $light-pink; }
 
     #{$me}__main { color: $light-pink; }
-  }
-
-  &--large{
-    padding: 16px 20px;
-
-    & + #{$me}--large { margin-top: 20px; }
-
-    #{$me}__date {
-      flex: 0 0 140px;
-      font-size: 24px;
-    }
-
-    #{$me}__separator { margin: 0 20px 0 8px; }
-
-    #{$me}__title { font-size: 24px; }
   }
 }
