--- a/src/components/organisms/footer/_footer.scss
+++ b/src/components/organisms/footer/_footer.scss
@@ -13,6 +13,10 @@
     box-sizing: border-box;
     justify-content: space-between;
     align-items: center;
+
+    @include sp {
+      display: block;
+    }
   }
 
   &__copy {
