--- a/src/assets/css/_fundamentals.scss
+++ b/src/assets/css/_fundamentals.scss
@@ -1,11 +1,15 @@
-h2 {
-  width: 100%;
-  max-width: 1024px;
-  margin: 100px auto 60px;
+h1, h2 {
+  margin: 100px 0 60px;
+  padding: 0;
   letter-spacing: 0.03em;
   font-size: 60px;
   font-family: $typography-fonts;
   color: $red;
+
+  @include sp {
+    margin: 60px 0 50px;
+    font-size: 40px;
+  }
 }
 
 h3 {
