--- a/src/components/molecules/main-visual/_main-visual.scss
+++ b/src/components/molecules/main-visual/_main-visual.scss
@@ -1,19 +1,87 @@
+@keyframes main-visual-image {
+  0% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 .m-main-visual {
   position: relative;
   width: 100%;
-  height: 600px;
+  height: calc(100vh - 212px);
   overflow: hidden;
   background-color: $red;
 
-  & > img {
+  @include sp {
+    height: calc(100vh - 60px);
+  }
+
+  &__carousel {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    padding: 0;
+    margin: 0;
+  }
+
+  &__carousel-slide-container {
     display: block;
     position: absolute;
-    width: auto;
-    min-width: 100%;
-    height: auto;
-    min-height: 100%;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    left: 0;
+    top: 0;
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+
+    & > li {
+      display: block;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      margin: 0;
+      padding: 0;
+      background-size: cover;
+      background-position: center;
+      opacity: 0.0;
+      transition: 1s ease-out;
+
+      &.active {
+        opacity: 0.7;
+        animation: main-visual-image 5s cubic-bezier(0.2, 0.6, 0.0, 1.0);
+      }
+    }
+  }
+
+  &__carousel-caption {
+    position: absolute;
+    color: $light-pink;
+    width: 100%;
+    left: 0;
+    bottom: 20px;
+    box-shadow: border-box;
+    opacity: 0.7;
+    font-size: 11px;
+    text-align: left;
+
+    & > div {
+      position: absolute;
+      width: 100%;
+      left: 20px;
+      bottom: 0;
+      opacity: 0.0;
+      transition: opacity 1.0s ease-out;
+
+      &.active {
+        opacity: 0.6;
+      }
+    }
   }
 }
