--- a/src/components/organisms/sp-menu/_sp-menu.scss
+++ b/src/components/organisms/sp-menu/_sp-menu.scss
@@ -14,6 +14,7 @@
   pointer-events: none;
 
   @include pc { display: none; }
+  @include tablet { display: block; }
 
   .a-hamburger-button {
     position: absolute;
