--- a/src/components/atoms/live-summary-link/style.scss
+++ b/src/components/atoms/live-summary-link/style.scss
@@ -1,4 +1,5 @@
 .a-live-summary-link {
+  position: relative;
   display: block;
   margin-bottom: 12px;
   padding: 24px 48px 24px 16px;
@@ -27,5 +28,13 @@
     color: $color-text-sub;
     font-size: 12px;
     text-align: right;
+  }
+
+  > .a-icon {
+    position: absolute;
+    top: calc(50% - 12px);
+    right: 12px;
+    color: $color-icon-navigation;
+    font-size: 24px;
   }
 }
