--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -2,8 +2,13 @@ $color-brand-primary: #c97783;
 $color-background-card: #ffffff;
 $color-background-page: #fff4f4;
 $color-border-card: #ffdddd;
+$color-border-list: #f0bfbf;
+$color-icon-navigation: #ff9696;
 $color-text-main: #484848;
 $color-text-sub: #909090;
 
 $fontset-alphanumeric: 'Rubik', sans-serif;
 $fontset-jp-mincho: 'Shippori Mincho', serif;
+
+$width-max-sp: 640px;
+$width-min-pc: $width-max-sp + 1px;
