--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,8 +1,12 @@
 @import './constants';
 @import './fonts';
 @import './functions';
+@import './mixins';
 
 @import './reset';
+
+@import '~swiper/swiper';
+@import '~swiper/components/effect-fade/effect-fade';
 
 @import '../components/utils/**/*.scss';
 @import '../components/atoms/**/*.scss';
