--- a/src/components/templates/general/style.scss
+++ b/src/components/templates/general/style.scss
@@ -8,4 +8,24 @@
       padding: 0 16px;
     }
   }
+
+  > .a-global-menu-open-button {
+    position: fixed;
+    top: 20px;
+    right: 24px;
+    z-index: $z-index-global-menu-open-button;
+
+    @include device(pc) {
+      top: 24px;
+    }
+  }
+
+  > .o-global-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: $z-index-global-menu;
+    width: 100%;
+    height: 100%;
+  }
 }
