--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -5,6 +5,7 @@ $color-border-card: #ffdddd;
 $color-border-list: #f0bfbf;
 $color-icon-navigation: #ff9696;
 $color-text-main: #484848;
+$color-text-main-white: #ffffff;
 $color-text-sub: #909090;
 
 $fontset-alphanumeric: 'Rubik', sans-serif;
@@ -12,3 +13,6 @@ $fontset-jp-mincho: 'Shippori Mincho', serif;
 
 $width-max-sp: 640px;
 $width-min-pc: $width-max-sp + 1px;
+
+$z-index-global-menu-open-button: 990;
+$z-index-global-menu: 1000;
