--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -6,6 +6,7 @@ $color-border-list: #f0bfbf;
 $color-icon-navigation: #ff9696;
 $color-text-main: #484848;
 $color-text-main-white: #ffffff;
+$color-text-section-heading: #646464;
 $color-text-sub: #909090;
 
 $fontset-alphanumeric: 'Rubik', sans-serif;
