--- a/src/components/molecules/top-kanban-nav-list/style.scss
+++ b/src/components/molecules/top-kanban-nav-list/style.scss
@@ -43,7 +43,7 @@
 
   &__item-text {
     color: $color-brand-primary;
-    font-weight: xd-font-weight('medium');
+    font-weight: xd-font-weight('light');
     font-size: 20px;
     font-family: $fontset-alphanumeric;
     text-align: center;
