--- a/src/components/organisms/global-footer/style.scss
+++ b/src/components/organisms/global-footer/style.scss
@@ -8,6 +8,7 @@
     margin: 0 0 12px 0;
     padding: 0;
     list-style-type: none;
+    font-weight: xd-font-weight('light');
     font-size: 12px;
     font-family: $fontset-alphanumeric;
   }
