--- a/src/styles/fonts.scss
+++ b/src/styles/fonts.scss
@@ -1,2 +1,1 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&family=Shippori+Mincho:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&family=Shippori+Mincho:wght@400&display=swap');
